# ffmpeg-video-player

./: CMakeLists.txt  lsan_suppressions.cpp  tutorial01.cpp  tutorial01_refactor.cpp  tutorial02.cpp  tutorial02_refactor.cpp
include/ffmpeg_utils/: ffmpeg_image_converter.h  ffmpeg_video_decoder.h
references/sdl2/: CMakeLists.txt  create_window.cpp  moving_rectangle.cpp  render_preset.cpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_ffmpeg_video_decoder.cpp
